--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
             <a href="#">Home</a>
             <a href="#services">Usługi</a>
             <a href="#how-to-order">Jak Zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="pakiets.html">Pakiety</a>
+            <a href="contact.html">Kontakt</a>
         </div>
 
         <div class="nav__desktop">
             <a href="#" class="link-animation">Home</a>
             <a href="#services" class="link-animation">Usługi</a>
             <a href="#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="../pakiets.html" class="link-animation">Pakiety</a>
-            <a href="../contact.html" class="link-animation">Kontakt</a>
+            <a href="pakiets.html" class="link-animation">Pakiety</a>
+            <a href="contact.html" class="link-animation">Kontakt</a>
         </div>
 
     </div>
@@ -159,8 +159,8 @@
             <a href="#">Home</a>
             <a href="#services">Usługi</a>
             <a href="#how-to-order">Jak zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="/pakiets.html">Pakiety</a>
+            <a href="/contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">czyscik.pl</p>
         <div class="footer__box-social">
