--- a/pakiets.html
+++ b/pakiets.html
@@ -10,9 +10,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;600;700&family=Lora:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/dist/css/main.min.css">
-<link rel="shortcut icon" href="../dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-<link rel="shortcut icon" href="../dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+<link rel="stylesheet" href="dist/css/main.min.css">
+<link rel="shortcut icon" href="dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+<link rel="shortcut icon" href="dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
 
 
 
@@ -43,16 +43,16 @@
             <a href="index.html">Home</a>
             <a href="index.html#services">Usługi</a>
             <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="pakiets.html">Pakiety</a>
+            <a href="contact.html">Kontakt</a>
         </div>
 
         <div class="nav__desktop">
             <a href="index.html" class="link-animation">Home</a>
             <a href="index.html#services" class="link-animation">Usługi</a>
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="../pakiets.html" class="link-animation">Pakiety</a>
-            <a href="../contact.html" class="link-animation">Kontakt</a>
+            <a href="pakiets.html" class="link-animation">Pakiety</a>
+            <a href="contact.html" class="link-animation">Kontakt</a>
         </div>
 
     </div>
