--- a/contact.html
+++ b/contact.html
@@ -110,8 +110,8 @@
     </div>
 </footer>
 
-    <script src="../dist/js/main.min.js"></script>
-    <script src="../dist/js/form.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
+    <script src="dist/js/form.min.js"></script>
 </body>
 
 </html>
