--- a/index.html
+++ b/index.html
@@ -127,24 +127,24 @@
             <div class="wrapper">
 
                 <div class="realization__box">
-                    <img data-src="../dist/img/1 (17) repaired.jpg" class="realization__box-img realization__box-img--3" alt="Wyprane fotele samochodowe wewnątrz trzyosobowego busa">
-                    <img data-src="../dist/img/1 (1) repaired.jpg" class="realization__box-img realization__box-img--5" alt="Wnętrze pojazdu marki bmw po czyszczeniu kokpitu">
-                    <img data-src="../dist/img/1 (3) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Wnętrze pojazdu marki audi po czyszczeniu kokpitu i praniu tapicerki">
-                    <img data-src="../dist/img/1 (13) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Wnętrze pojazdu marki mazda po czyszczeniu kokpitu i praniu tapicerki">
-                    <img data-src="../dist/img/1 (10) repaired.jpg" class="realization__box-img realization__box-img--6" alt="Lśniąca maska samochodu bmw po dogłębnym oczyszczeniu lakieru">
-                    <img data-src="../dist/img/1 (6) repaired.jpg" class="realization__box-img realization__box-img--9" alt="Pranie tapicerki samochodowej odkurzaczem piorącym marki karcher">
+                    <img data-src="dist/img/1 (17) repaired.jpg" class="realization__box-img realization__box-img--3" alt="Wyprane fotele samochodowe wewnątrz trzyosobowego busa">
+                    <img data-src="dist/img/1 (1) repaired.jpg" class="realization__box-img realization__box-img--5" alt="Wnętrze pojazdu marki bmw po czyszczeniu kokpitu">
+                    <img data-src="dist/img/1 (3) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Wnętrze pojazdu marki audi po czyszczeniu kokpitu i praniu tapicerki">
+                    <img data-src="dist/img/1 (13) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Wnętrze pojazdu marki mazda po czyszczeniu kokpitu i praniu tapicerki">
+                    <img data-src="dist/img/1 (10) repaired.jpg" class="realization__box-img realization__box-img--6" alt="Lśniąca maska samochodu bmw po dogłębnym oczyszczeniu lakieru">
+                    <img data-src="dist/img/1 (6) repaired.jpg" class="realization__box-img realization__box-img--9" alt="Pranie tapicerki samochodowej odkurzaczem piorącym marki karcher">
 
-                    <img data-src="../dist/img/mobileDblSeats.jpg" class="realization__box-img realization__box-img--1 mobile" alt="Zdjęcia przed i po dogłębnym oczyszczeniu wnętrza w pojeździe">
-                    <img data-src="../dist/img/seats-dbl.jpg" class="realization__box-img realization__box-img--1 desktop" alt="Zdjęcia przed i po dogłębnym oczyszczeniu wnętrza w pojeździe">
+                    <img data-src="dist/img/mobileDblSeats.jpg" class="realization__box-img realization__box-img--1 mobile" alt="Zdjęcia przed i po dogłębnym oczyszczeniu wnętrza w pojeździe">
+                    <img data-src="dist/img/seats-dbl.jpg" class="realization__box-img realization__box-img--1 desktop" alt="Zdjęcia przed i po dogłębnym oczyszczeniu wnętrza w pojeździe">
 <!-- te alty jeszcze naprawić -->
-                    <img data-src="../dist/img/mobileSteeringWheel.jpg" class="realization__box-img realization__box-img--4 mobile" alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
-                    <img data-src="../dist/img/dblSterringJpg.jpg" class="realization__box-img realization__box-img--4 desktop" alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
+                    <img data-src="dist/img/mobileSteeringWheel.jpg" class="realization__box-img realization__box-img--4 mobile" alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
+                    <img data-src="dist/img/dblSterringJpg.jpg" class="realization__box-img realization__box-img--4 desktop" alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
 
-                    <img data-src="../dist/img/1 (15) repaired.jpg" class="realization__box-img realization__box-img--10" alt="Element kabiny samochodowej w pianie podczas usuwania brudu ">
-                    <img data-src="../dist/img/1 (5) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Samochód z otwartymi wszystkimi drzwiami w samochodzie, skupiający się na oczyszczonym bagażniku z brudu">
-                    <img data-src="../dist/img/1 (2) repaired.jpg" class="realization__box-img realization__box-img--7" alt="Lśniący lakier w samochodzie na tle garażów">
-                    <img data-src="../dist/img/1 (16) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Czyszczenie pędzelkiem środka drzwi w samochodzie">
-                    <img data-src="../dist/img/1 (9) repaired.jpg" class="realization__box-img realization__box-img--2" alt="Efekt przed i po szorowaniu gąbką deski rozdzielczej">
+                    <img data-src="dist/img/1 (15) repaired.jpg" class="realization__box-img realization__box-img--10" alt="Element kabiny samochodowej w pianie podczas usuwania brudu ">
+                    <img data-src="dist/img/1 (5) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Samochód z otwartymi wszystkimi drzwiami w samochodzie, skupiający się na oczyszczonym bagażniku z brudu">
+                    <img data-src="dist/img/1 (2) repaired.jpg" class="realization__box-img realization__box-img--7" alt="Lśniący lakier w samochodzie na tle garażów">
+                    <img data-src="dist/img/1 (16) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Czyszczenie pędzelkiem środka drzwi w samochodzie">
+                    <img data-src="dist/img/1 (9) repaired.jpg" class="realization__box-img realization__box-img--2" alt="Efekt przed i po szorowaniu gąbką deski rozdzielczej">
                 </div>
             </div>
 
@@ -171,7 +171,7 @@
     </div>
 </footer>
 
-    <script src="../dist/js/main.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
