--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -176,7 +176,7 @@
 </footer>
 
 
-    <script src="../dist/js/main.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
