--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -117,7 +117,7 @@
     </div>
 </footer>
 
-    <script src="../dist/js/main.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
