--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -63,7 +63,7 @@
                 <div class="inside-cleaning">
                     <div class="inside-cleaning__box">
                         <div class="inside-cleaning__box-best">Najpopularniejsze</div>
-                        <img src="../dist/img/pranieTapicerkiStrona.jpg"
+                        <img src="dist/img/pranieTapicerkiStrona.jpg"
                             alt="Pranie tapicerki samochodowej odkurzaczem piarącym`" class="inside-cleaning__box-img">
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">100-200zł</p>
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="inside-cleaning__box" id="about-cockpit">
-                        <img src="../dist/img/pedzelkowanierd.jpg"
+                        <img src="dist/img/pedzelkowanierd.jpg"
                             alt="Czyszczenie pędzelkiem kokpitu w samochodzie" class="inside-cleaning__box-img">
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">50-100zł</p>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="inside-cleaning__box" id="about-headliner">
-                        <img src="../dist/img/pedzelkowanierd.jpg" alt="Czysta podsufitka w samochodzie" class="inside-cleaning__box-img">
+                        <img src="dist/img/pedzelkowanierd.jpg" alt="Czysta podsufitka w samochodzie" class="inside-cleaning__box-img">
 
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">50-75zł</p>
