--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -63,7 +63,7 @@
                 <div class="outside-cleaning">
                     <h2 class="section-heading">Standard</h2>
                     <div class="outside-cleaning__box">
-                        <img src="../dist/img/woskowanie.jpg" class="outside-cleaning__box-img"
+                        <img src="dist/img/woskowanie.jpg" class="outside-cleaning__box-img"
                             alt="Mężczyzna poleruje samochod">
                         <div class="outside-cleaning__box-offer">
                             <p class="outside-cleaning__box-offer-price">100-150zł</p>
