--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class="section-heading">Usługi</h2>
             <div class="services">
 
-                <a href="../insideCleaning.html" class="services__box">
+                <a href="insideCleaning.html" class="services__box">
                     <h3 class="services__box-heading">Czyszczenie<span
                             class="services__box-heading services__box-heading--highlighted"> wnętrza</span>
                         samochodu
@@ -88,7 +88,7 @@
                 </a>
 
 
-                <a href="../outsideCleaning.html" class="services__box services__box--outside-img">
+                <a href="outsideCleaning.html" class="services__box services__box--outside-img">
                     <h3 class="services__box-heading services__box-heading--right">Czyszczenie <span
                             class="services__box-heading services__box-heading--highlighted">zewnętrza</span>
                         samochodu</h3>
