--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -149,7 +149,7 @@
 
 
 
-                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a href="../pakiets.html"
+                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a href="pakiets.html"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
             </section>
