--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <p class="info-pakiets">Skorzystaj z naszej opcji lub sprawdź <a href="../pakiets.html"
+                <p class="info-pakiets">Skorzystaj z naszej opcji lub sprawdź <a href="pakiets.html"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
             </section>
