--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                         <div>
                             <input type="checkbox" id="checkbox" class="form__checkbox form-item">
                             <label for="checkbox" class="form__label error-item">Akceptuje
-                                <a href="../privacy-policy.html" class="form__label-link">Politykę Prywatności</a>
+                                <a href="privacy-policy.html" class="form__label-link">Politykę Prywatności</a>
                             </label>
                         </div>
 
@@ -95,11 +95,11 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak zamówić</a>
+            <a href="pakiets.html">Pakiety</a>
+            <a href="contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">czyscik.pl</p>
         <div class="footer__box-social">
