--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -102,11 +102,11 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak zamówić</a>
+            <a href="pakiets.html">Pakiety</a>
+            <a href="contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">czyscik.pl</p>
         <div class="footer__box-social">
