ready on guthub

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="test">
+    <title>Detailing Konin - pranie tapicerki, usługi auto detailingowe</title>
+    <meta name="description"
+        content="Czy Twój pojazd wymaga odświeżenia? Bez względu na to czy to pranie tapicerki bądź polerowanie lakieru, mam rozwiązanie, które spełni Twoje oczekiwania">
     <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +20,11 @@
 </head>
 
 <body>
-
     <header class="header">
         <nav class="nav">
     <div class="wrapper">
 
         <div class="nav__box">
-            <!-- <i class="fa-solid fa-phone nav__box-icon"></i> -->
             <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
@@ -42,17 +41,17 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak Zamówić</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak Zamówić</a>
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="#" class="link-animation">Home</a>
-            <a href="#services" class="link-animation">Usługi</a>
-            <a href="#how-to-order" class="link-animation">Jak Zamówić</a>
+            <a href="index.html" class="link-animation">Home</a>
+            <a href="index.html#services" class="link-animation">Usługi</a>
+            <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
             <a href="../pakiets.html" class="link-animation">Pakiety</a>
             <a href="../contact.html" class="link-animation">Kontakt</a>
         </div>
@@ -60,25 +59,30 @@
     </div>
 </nav>
         <div class="wrapper">
-            <h1 class="header__heading">Auto detaling konin</h1>
+            <h1 class="header__heading">Auto detailing konin</h1>
             <p class="header__text">Witaj w naszym wyjątkowym świecie auto detailingu! Jeśli szukasz doskonałej
                 pielęgnacji dla Twojego samochodu, jesteś we właściwym miejscu. Daj swojemu pojazdowi wyjątkową troskę,
                 odświeżenie i ochronę, które podkreślą jego piękno i spraw, by Twój samochód błyszczał na drodze.</p>
             <a href="#services" class="header__btn">Sprawdź ofertę</a>
-            <a href="#services"><i class="fa-solid fa-angles-down header__scroll-down"></i></a>
+            <a href="#services" aria-label="Zjedź niżej by sprawdzić ofertę"><i
+                    class="fa-solid fa-angles-down header__scroll-down"></i></a>
         </div>
 
         <div class="header__hero-bg"></div>
     </header>
     <main class="main">
-        <section class="section" id="services"> 
+        <section class="section" id="services">
             <h2 class="section-heading">Usługi</h2>
             <div class="services">
 
                 <a href="../insideCleaning.html" class="services__box">
+
+          
+
+
                     <h3 class="services__box-heading">Czyszczenie<span
                             class="services__box-heading services__box-heading--highlighted"> wnętrza</span>
-                        samochodu
+samochodu
                     </h3>
 
                     <div class="services__box-check">
@@ -89,6 +93,9 @@
 
 
                 <a href="../outsideCleaning.html" class="services__box services__box--outside-img">
+
+           
+
                     <h3 class="services__box-heading services__box-heading--right">Czyszczenie <span
                             class="services__box-heading services__box-heading--highlighted">zewnętrza</span>
                         samochodu</h3>
@@ -127,24 +134,41 @@
             <div class="wrapper">
 
                 <div class="realization__box">
-                    <img data-src="../dist/img/1 (17) repaired.jpg" class="realization__box-img realization__box-img--3" alt="Wyprane fotele samochodowe wewnątrz trzyosobowego busa">
-                    <img data-src="../dist/img/1 (1) repaired.jpg" class="realization__box-img realization__box-img--5" alt="Wnętrze pojazdu marki bmw po czyszczeniu kokpitu">
-                    <img data-src="../dist/img/1 (3) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Wnętrze pojazdu marki audi po czyszczeniu kokpitu i praniu tapicerki">
-                    <img data-src="../dist/img/1 (13) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Wnętrze pojazdu marki mazda po czyszczeniu kokpitu i praniu tapicerki">
-                    <img data-src="../dist/img/1 (10) repaired.jpg" class="realization__box-img realization__box-img--6" alt="Lśniąca maska samochodu bmw po dogłębnym oczyszczeniu lakieru">
-                    <img data-src="../dist/img/1 (6) repaired.jpg" class="realization__box-img realization__box-img--9" alt="Pranie tapicerki samochodowej odkurzaczem piorącym marki karcher">
-
-                    <img data-src="../dist/img/mobileDblSeats.jpg" class="realization__box-img realization__box-img--1 mobile" alt="Zdjęcia przed i po dogłębnym oczyszczeniu wnętrza w pojeździe">
-                    <img data-src="../dist/img/seats-dbl.jpg" class="realization__box-img realization__box-img--1 desktop" alt="Zdjęcia przed i po dogłębnym oczyszczeniu wnętrza w pojeździe">
-<!-- te alty jeszcze naprawić -->
-                    <img data-src="../dist/img/mobileSteeringWheel.jpg" class="realization__box-img realization__box-img--4 mobile" alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
-                    <img data-src="../dist/img/dblSterringJpg.jpg" class="realization__box-img realization__box-img--4 desktop" alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
-
-                    <img data-src="../dist/img/1 (15) repaired.jpg" class="realization__box-img realization__box-img--10" alt="Element kabiny samochodowej w pianie podczas usuwania brudu ">
-                    <img data-src="../dist/img/1 (5) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Samochód z otwartymi wszystkimi drzwiami w samochodzie, skupiający się na oczyszczonym bagażniku z brudu">
-                    <img data-src="../dist/img/1 (2) repaired.jpg" class="realization__box-img realization__box-img--7" alt="Lśniący lakier w samochodzie na tle garażów">
-                    <img data-src="../dist/img/1 (16) repaired.jpg" class="realization__box-img realization__box-img--8" alt="Czyszczenie pędzelkiem środka drzwi w samochodzie">
-                    <img data-src="../dist/img/1 (9) repaired.jpg" class="realization__box-img realization__box-img--2" alt="Efekt przed i po szorowaniu gąbką deski rozdzielczej">
+                    <img data-src="../dist/img/1 (17) repaired.jpg" class="realization__box-img realization__box-img--3"
+                        alt="Wyprane fotele samochodowe wewnątrz trzyosobowego busa">
+                    <img data-src="../dist/img/1 (1) repaired.jpg" class="realization__box-img"
+                        alt="Wnętrze pojazdu marki bmw po czyszczeniu kokpitu">
+                    <img data-src="../dist/img/1 (3) repaired.jpg" class="realization__box-img"
+                        alt="Wnętrze pojazdu marki audi po czyszczeniu kokpitu i praniu tapicerki">
+                    <img data-src="../dist/img/1 (13) repaired.jpg" class="realization__box-img"
+                        alt="Wnętrze pojazdu marki mazda po czyszczeniu kokpitu i praniu tapicerki">
+                    <img data-src="../dist/img/1 (10) repaired.jpg" class="realization__box-img"
+                        alt="Lśniąca maska marki samochodu bmw po dogłębnym oczyszczeniu lakieru">
+                    <img data-src="../dist/img/1 (6) repaired.jpg" class="realization__box-img realization__box-img--9"
+                        alt="Pranie tapicerki samochodowej odkurzaczem piorącym marki karcher">
+                    <img data-src="../dist/img/mobileDblSeats.jpg"
+                        class="realization__box-img realization__box-img--1 mobile"
+                        alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
+                    <img data-src="../dist/img/seats-dbl.jpg"
+                        class="realization__box-img realization__box-img--1 desktop"
+                        alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
+                    <img data-src="../dist/img/mobileSteeringWheel.jpg"
+                        class="realization__box-img realization__box-img--4 mobile"
+                        alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
+                    <img data-src="../dist/img/dblSterringJpg.jpg"
+                        class="realization__box-img realization__box-img--4 desktop"
+                        alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
+                    <img data-src="../dist/img/1 (15) repaired.jpg"
+                        class="realization__box-img realization__box-img--10"
+                        alt="Element kabiny samochodowej w pianie podczas usuwania brudu">
+                    <img data-src="../dist/img/1 (5) repaired.jpg" class="realization__box-img"
+                        alt="Samochód z otwartymi wszystkimi drzwiami w samochodzie, skupiający się na oczyszczonym bagażniku z brudu">
+                    <img data-src="../dist/img/1 (2) repaired.jpg" class="realization__box-img"
+                        alt="Lśniący lakier na samochodzie na tle garażów">
+                    <img data-src="../dist/img/1 (16) repaired.jpg" class="realization__box-img"
+                        alt="Czyszczenie pędzelkiem środka drzwi w samochodzie">
+                    <img data-src="../dist/img/1 (9) repaired.jpg" class="realization__box-img"
+                        alt="Efekt przed i po szorowaniu gąbką deski rozdzielczej">
                 </div>
             </div>
 
@@ -156,20 +180,22 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak zamówić</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">czyscik.pl</p>
+        <p class="footer__domain-name">detalingkonin.pl</p>
         <div class="footer__box-social">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
+            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
 </footer>
+
+ 
 
     <script src="../dist/js/main.min.js"></script>
 </body>
