--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,6 @@
     <div class="wrapper">
 
         <div class="nav__box">
-            <!-- <i class="fa-solid fa-phone nav__box-icon"></i> -->
             <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
@@ -19,17 +18,17 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak Zamówić</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak Zamówić</a>
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="#" class="link-animation">Home</a>
-            <a href="#services" class="link-animation">Usługi</a>
-            <a href="#how-to-order" class="link-animation">Jak Zamówić</a>
+            <a href="index.html" class="link-animation">Home</a>
+            <a href="index.html#services" class="link-animation">Usługi</a>
+            <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
             <a href="../pakiets.html" class="link-animation">Pakiety</a>
             <a href="../contact.html" class="link-animation">Kontakt</a>
         </div>
