--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="test1">
+    <title>Detailing Konin - formularz kontaktowy</title>
+    <meta name="description" content="Masz jakieś pytania lub chciałbyś sie umówić na wizytę? Pisz smiało i skontaktuj się ze mną za pomocą formularza kontaktowego">
 
     <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,11 +20,10 @@
 </head>
 
 <body>
-    <nav class="nav dark-shadow">
+    <nav class="nav">
     <div class="wrapper">
 
         <div class="nav__box">
-            <!-- <i class="fa-solid fa-phone nav__box-icon"></i> -->
             <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
@@ -87,7 +86,7 @@
 
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2442.966947630051!2d18.268466000000004!3d52.243984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNTLCsDE0JzM4LjMiTiAxOMKwMTYnMDYuNSJF!5e0!3m2!1spl!2spl!4v1689743401520!5m2!1spl!2spl"
-                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Moja lokalizacja na google maps"></iframe>
             </div>
         </section>
     </main>
@@ -95,20 +94,22 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak zamówić</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">czyscik.pl</p>
+        <p class="footer__domain-name">detalingkonin.pl</p>
         <div class="footer__box-social">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
+            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
 </footer>
+
+ 
 
     <script src="../dist/js/main.min.js"></script>
     <script src="../dist/js/form.min.js"></script>
