--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="test11">
+    <title>Detailing Konin - czyszczenie wnętrza samochodu</title>
+    <meta name="description"
+        content="Potrzebujesz odnowić wnętrze twojego pojazdu? Jeśli tak to idealnie trafiłeś! Dzięki specjalistycznemu sprzętu przywrócę świeżość Twojego samochodu">
     <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,12 +18,11 @@
 
 </head>
 
-<body>
-    <nav class="nav dark-shadow">
+<body class="insideCleaningSubpage">
+    <nav class="nav">
     <div class="wrapper">
 
         <div class="nav__box">
-            <!-- <i class="fa-solid fa-phone nav__box-icon"></i> -->
             <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
@@ -65,11 +65,18 @@
                         <div class="inside-cleaning__box-best">Najpopularniejsze</div>
                         <img src="../dist/img/pranieTapicerkiStrona.jpg"
                             alt="Pranie tapicerki samochodowej odkurzaczem piarącym`" class="inside-cleaning__box-img">
+
+                        <div class="inside-cleaning__box-license">
+                            <a class="inside-cleaning__box-license-link"
+                                href="https://www.freepik.com/free-photo/car-wash-detailing-station_8380351.htm#query=pranie%20tapicerki%20samochodowej&position=6&from_view=search&track=ais">Image
+                                by senivpetro</a> on Freepik
+                        </div>
+
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">100-200zł</p>
                             <h3 class="inside-cleaning__box-offer-heading">Pranie tapicerki samochodowej </h3>
 
-                            <button class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
+                            <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
                                 <i class="both-cleaning-btn-icon fa-solid fa-minus "></i>
 
                             </button>
@@ -94,12 +101,18 @@
                     </div>
 
                     <div class="inside-cleaning__box" id="about-cockpit">
-                        <img src="../dist/img/pedzelkowanierd.jpg"
-                            alt="Czyszczenie pędzelkiem kokpitu w samochodzie" class="inside-cleaning__box-img">
+                        <img src="../dist/img/pedzelkowanierd.jpg" alt="Czyszczenie pędzelkiem kokpitu w samochodzie"
+                            class="inside-cleaning__box-img">
+
+                        <div class="inside-cleaning__box-license">
+                            Image by <a class="inside-cleaning__box-license-link"
+                                href="https://www.freepik.com/free-photo/close-up-car-care-process_20735951.htm#query=pranie%20tapicerki%20samochodowej&position=31&from_view=search&track=ais#position=31&query=pranie%20tapicerki%20samochodowej">Freepik</a>
+                        </div>
+
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">50-100zł</p>
                             <h3 class="inside-cleaning__box-offer-heading">Czyszczenie i aplikacja dresingu na kokpit
-                            </h3> <button class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
+                            </h3> <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
                                 <i class="both-cleaning-btn-icon fa-solid fa-solid fa-plus"></i>
                             </button>
                         </div>
@@ -119,12 +132,13 @@
                         </div>
                     </div>
                     <div class="inside-cleaning__box" id="about-headliner">
-                        <img src="../dist/img/pedzelkowanierd.jpg" alt="Czysta podsufitka w samochodzie" class="inside-cleaning__box-img">
+                        <img src="../dist/img/car-headliner.jpg" alt="Czysta podsufitka w samochodzie"
+                            class="inside-cleaning__box-img">
 
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">50-75zł</p>
                             <h3 class="inside-cleaning__box-offer-heading">Czyszczenie podsufitki</h3>
-                            <button class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn"><i
+                            <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn"><i
                                     class="both-cleaning-btn-icon fa-solid  fa-plus"></i></button>
                         </div>
 
@@ -160,20 +174,22 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak zamówić</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">czyscik.pl</p>
+        <p class="footer__domain-name">detalingkonin.pl</p>
         <div class="footer__box-social">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
+            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
 </footer>
+
+ 
 
 
     <script src="../dist/js/main.min.js"></script>
