--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="test11">
+    <title>Detailing Konin - polerowanie lakieru, czyszczenie felg</title>
+    <meta name="description" content="Przywróć blask swojemu samochodowi! Wykorzystuję specjalistyczne techniki, by usunąć zarysowania, wypolerować lakier i chronić go przed dalszym brudem">
     <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,11 +18,10 @@
 </head>
 
 <body>
-    <nav class="nav dark-shadow">
+    <nav class="nav">
     <div class="wrapper">
 
         <div class="nav__box">
-            <!-- <i class="fa-solid fa-phone nav__box-icon"></i> -->
             <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
@@ -71,7 +70,7 @@
                                 Oczyszczenie lakieru systemem NO RINSE</h3>
                             <h3 class="outside-cleaning__box-offer-heading"><i class="fa-solid fa-minus"></i> Mycie felg
                             </h3>
-                            <button class="both-cleaning__box-offer-btn  outside-cleaning__box-offer-btn">
+                            <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn  outside-cleaning__box-offer-btn">
 
                                 <i class="both-cleaning-btn-icon fa-solid fa-plus"></i>
 
@@ -102,20 +101,22 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak zamówić</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">czyscik.pl</p>
+        <p class="footer__domain-name">detalingkonin.pl</p>
         <div class="footer__box-social">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
+            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
 </footer>
+
+ 
 
     <script src="../dist/js/main.min.js"></script>
 </body>
