--- a/pakiets.html
+++ b/pakiets.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="test11">
+    <title>Detailing Konin - promocyjne pakiety dla twojego pojazdu</title>
+    <meta name="description" content="Odkryj nasze atrakcyjne promocyjne pakiety auto detailingowe w Koninie! Daj swojemu pojazdowi najlepszą opiekę już dziś">
     <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,11 +19,10 @@
 </head>
 
 <body>
-    <nav class="nav dark-shadow">
+    <nav class="nav">
     <div class="wrapper">
 
         <div class="nav__box">
-            <!-- <i class="fa-solid fa-phone nav__box-icon"></i> -->
             <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
@@ -69,7 +68,8 @@
                             <p class="card__box-title">Zabezpieczene Lakieru</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: zabezpieczenie lakieru 1/5</p>
-                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,8 @@
                             <p class="card__box-title">Czyszczenie felg</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie felg 2/5</p>
-                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
                             </div>
                         </div>
                     </div>
@@ -89,7 +90,8 @@
                             <p class="card__box-title">Pranie tapicerki</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: pranie tapicerki 3/5</p>
-                                <a href="../insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz
+                                    się więcej</a>
                             </div>
                         </div>
                     </div>
@@ -99,7 +101,8 @@
                             <p class="card__box-title">Czyszczenie kokpitu</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie kokpitu 4/5</p>
-                                <a href="../insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
                             </div>
                         </div>
                     </div>
@@ -109,7 +112,8 @@
                             <p class="card__box-title">Czyszczenie podsufikti</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: bonetowanie podsufikti 5/5</p>
-                                <a href="../insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
                             </div>
                         </div>
                     </div>
@@ -126,17 +130,13 @@
                 <h2 class="section-heading">Inside pakiet</h2>
                 <div class="single-pakiet single-pakiet--inside">
 
-
-           
-
-               
-
                     <div class="card card--inside inside-pakiet-card upholstery-washing active">
                         <div class="card__box">
                             <p class="card__box-title">Pranie tapicerki</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: pranie tapicerki 1/3</p>
-                                <a href="../insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz
+                                    się więcej</a>
                             </div>
                         </div>
                     </div>
@@ -146,7 +146,8 @@
                             <p class="card__box-title">Czyszczenie kokpitu</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie kokpitu 2/3</p>
-                                <a href="../insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
                             </div>
                         </div>
                     </div>
@@ -156,7 +157,8 @@
                             <p class="card__box-title">Czyszczenie podsufikti</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: bonetowanie podsufikti 3/3</p>
-                                <a href="../insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się więcej</a>
+                                <a href="../insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
                             </div>
                         </div>
                     </div>
@@ -177,20 +179,22 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="#">Home</a>
-            <a href="#services">Usługi</a>
-            <a href="#how-to-order">Jak zamówić</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">czyscik.pl</p>
+        <p class="footer__domain-name">detalingkonin.pl</p>
         <div class="footer__box-social">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
+            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
 </footer>
+
+ 
 
     <script src="../dist/js/main.min.js"></script>
 </body>
