ready for github 2

--- a/pakiets.html
+++ b/pakiets.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav dark-shadow">
     <div class="wrapper">
 
         <div class="nav__box">
