--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav dark-shadow">
     <div class="wrapper">
 
         <div class="nav__box">
