--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav dark-shadow">
     <div class="wrapper">
 
         <div class="nav__box">
