before privacy policy

--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">detalingkonin.pl</p>
+        <p class="footer__domain-name">detailingkonin.pl</p>
         <div class="footer__box-social">
             <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
