--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
             <div class="nav__box-call">
-                <p class="nav__box-call-number underline">662 520 511</p>
+                <p class="nav__box-call-number show-number underline">662 520 511</p>
             </div>
 
         </div>
@@ -110,7 +110,7 @@ samochodu
         </section>
 
         <section class="section" id="how-to-order">
-            <h2 class="section-heading">jak zamówić usługę</h2>
+            <h2 class="section-heading">Jak zamówić usługę</h2>
 
             <div class="ordering">
                 <div class="ordering__box">
@@ -130,9 +130,8 @@ samochodu
         </section>
 
         <section class="section realization">
-            <h2 class="section-heading">moje realizacje</h2>
+            <h2 class="section-heading">Moje realizacje</h2>
             <div class="wrapper">
-
                 <div class="realization__box">
                     <img data-src="../dist/img/1 (17) repaired.jpg" class="realization__box-img realization__box-img--3"
                         alt="Wyprane fotele samochodowe wewnątrz trzyosobowego busa">
@@ -168,10 +167,9 @@ samochodu
                     <img data-src="../dist/img/1 (16) repaired.jpg" class="realization__box-img"
                         alt="Czyszczenie pędzelkiem środka drzwi w samochodzie">
                     <img data-src="../dist/img/1 (9) repaired.jpg" class="realization__box-img"
-                        alt="Efekt przed i po szorowaniu gąbką deski rozdzielczej">
+                        alt="Efekt przed i po czyszczeniu gąbką deski rozdzielczej">
                 </div>
             </div>
-
         </section>
     </main>
 
@@ -186,7 +184,7 @@ samochodu
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">detalingkonin.pl</p>
+        <p class="footer__domain-name">detailingkonin.pl</p>
         <div class="footer__box-social">
             <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
