--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailing Konin - polerowanie lakieru, czyszczenie felg</title>
-    <meta name="description" content="Przywróć blask swojemu samochodowi! Wykorzystuję specjalistyczne techniki, by usunąć zarysowania, wypolerować lakier i chronić go przed dalszym brudem">
+    <meta name="description"
+        content="Przywróć blask swojemu samochodowi! Wykorzystuję specjalistyczne techniki, by usunąć zarysowania, wypolerować lakier i chronić go przed dalszym brudem">
     <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +27,7 @@
 
 
             <div class="nav__box-call">
-                <p class="nav__box-call-number underline">662 520 511</p>
+                <p class="nav__box-call-number show-number underline">662 520 511</p>
             </div>
 
         </div>
@@ -57,8 +58,8 @@
 </nav>
 
     <main class="main">
-        <div class="wrapper">
-            <section>
+        <section>
+            <div class="wrapper">
                 <div class="outside-cleaning">
                     <h2 class="section-heading">Standard</h2>
                     <div class="outside-cleaning__box">
@@ -70,14 +71,16 @@
                                 Oczyszczenie lakieru systemem NO RINSE</h3>
                             <h3 class="outside-cleaning__box-offer-heading"><i class="fa-solid fa-minus"></i> Mycie felg
                             </h3>
-                            <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn  outside-cleaning__box-offer-btn">
+                            <button aria-label="Rozwiń menu tekstowe"
+                                class="both-cleaning__box-offer-btn  outside-cleaning__box-offer-btn">
 
                                 <i class="both-cleaning-btn-icon fa-solid fa-plus"></i>
 
                             </button>
                         </div>
 
-                        <div class="both-cleaning__accordion-text  outside-cleaning__accordion-text active" id="about-pakiet">
+                        <div class="both-cleaning__accordion-text  outside-cleaning__accordion-text active"
+                            id="about-pakiet">
                             <p>
                                 Metoda bez płukania, znana również jako no rinse, to innowacyjny sposób czyszczenia,
                                 który umożliwia skuteczne usuwanie brudu i zanieczyszczeń z różnych powierzchni bez
@@ -93,8 +96,8 @@
                 <p class="info-pakiets">Skorzystaj z naszej opcji lub sprawdź <a href="../pakiets.html"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
 
 
@@ -107,7 +110,7 @@
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">detalingkonin.pl</p>
+        <p class="footer__domain-name">detailingkonin.pl</p>
         <div class="footer__box-social">
             <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
