--- a/pakiets.html
+++ b/pakiets.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailing Konin - promocyjne pakiety dla twojego pojazdu</title>
-    <meta name="description" content="Odkryj nasze atrakcyjne promocyjne pakiety auto detailingowe w Koninie! Daj swojemu pojazdowi najlepszą opiekę już dziś">
+    <meta name="description"
+        content="Odkryj nasze atrakcyjne promocyjne pakiety auto detailingowe w Koninie! Daj swojemu pojazdowi najlepszą opiekę już dziś">
     <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
 
 
             <div class="nav__box-call">
-                <p class="nav__box-call-number underline">662 520 511</p>
+                <p class="nav__box-call-number show-number underline">662 520 511</p>
             </div>
 
         </div>
@@ -57,8 +58,8 @@
     </div>
 </nav>
     <main class="main">
-        <div class="wrapper">
-            <section class="pakiets">
+        <section class="pakiets">
+            <div class="wrapper">
                 <h2 class="section-heading">full pakiet</h2>
                 <div class="single-pakiet">
 
@@ -171,8 +172,8 @@
                     </div>
 
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
     </main>
 
@@ -185,7 +186,7 @@
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">detalingkonin.pl</p>
+        <p class="footer__domain-name">detailingkonin.pl</p>
         <div class="footer__box-social">
             <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
