--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,7 +28,7 @@
 
 
             <div class="nav__box-call">
-                <p class="nav__box-call-number underline">662 520 511</p>
+                <p class="nav__box-call-number show-number underline">662 520 511</p>
             </div>
 
         </div>
@@ -57,6 +57,19 @@
 
     </div>
 </nav>
+    <div class="wrapper">
+        <div class="privacy-policy">
+            <p>polityka prywatności</p>
+            <p>w trakcie tworzenia</p>
+            <p>w trakcie tworzenia</p>
+            <p>w trakcie tworzenia</p>
+            <p>w trakcie tworzenia</p>
+            <p>w trakcie tworzenia</p>
+            <p>w trakcie tworzenia</p>
+            <p>polityka prywatności</p>
+        </div>
+    </div>
+
 
 
 
@@ -70,7 +83,7 @@
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">detalingkonin.pl</p>
+        <p class="footer__domain-name">detailingkonin.pl</p>
         <div class="footer__box-social">
             <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
