--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
 
             <div class="nav__box-call">
-                <p class="nav__box-call-number underline">662 520 511</p>
+                <p class="nav__box-call-number show-number underline">662 520 511</p>
             </div>
 
         </div>
@@ -86,7 +86,7 @@
 
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2442.966947630051!2d18.268466000000004!3d52.243984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNTLCsDE0JzM4LjMiTiAxOMKwMTYnMDYuNSJF!5e0!3m2!1spl!2spl!4v1689743401520!5m2!1spl!2spl"
-                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Moja lokalizacja na google maps"></iframe>
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Lokalizacja na google maps Gajowa 7a, 62-510 Konin"></iframe>
             </div>
         </section>
     </main>
@@ -100,7 +100,7 @@
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">detalingkonin.pl</p>
+        <p class="footer__domain-name">detailingkonin.pl</p>
         <div class="footer__box-social">
             <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
