--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -27,7 +27,7 @@
 
 
             <div class="nav__box-call">
-                <p class="nav__box-call-number underline">662 520 511</p>
+                <p class="nav__box-call-number show-number underline">662 520 511</p>
             </div>
 
         </div>
@@ -58,26 +58,27 @@
 </nav>
 
     <main class="main">
-        <div class="wrapper">
-            <section>
+        <section>
+            <div class="wrapper">
                 <div class="inside-cleaning">
                     <div class="inside-cleaning__box">
                         <div class="inside-cleaning__box-best">Najpopularniejsze</div>
                         <img src="../dist/img/pranieTapicerkiStrona.jpg"
-                            alt="Pranie tapicerki samochodowej odkurzaczem piarącym`" class="inside-cleaning__box-img">
+                            alt="Pranie tapicerki samochodowej odkurzaczem piarącym" class="inside-cleaning__box-img">
 
                         <div class="inside-cleaning__box-license">
-                            <a class="inside-cleaning__box-license-link"
+                            <a target="_blank" rel="noopener" class="inside-cleaning__box-license-link"
                                 href="https://www.freepik.com/free-photo/car-wash-detailing-station_8380351.htm#query=pranie%20tapicerki%20samochodowej&position=6&from_view=search&track=ais">Image
                                 by senivpetro</a> on Freepik
                         </div>
 
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">100-200zł</p>
-                            <h3 class="inside-cleaning__box-offer-heading">Pranie tapicerki samochodowej </h3>
+                            <h3 class="inside-cleaning__box-offer-heading">Pranie tapicerki samochodowej</h3>
 
-                            <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
-                                <i class="both-cleaning-btn-icon fa-solid fa-minus "></i>
+                            <button aria-label="Rozwiń menu tekstowe"
+                                class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
+                                <i class="both-cleaning-btn-icon fa-solid fa-minus"></i>
 
                             </button>
                         </div>
@@ -105,14 +106,15 @@
                             class="inside-cleaning__box-img">
 
                         <div class="inside-cleaning__box-license">
-                            Image by <a class="inside-cleaning__box-license-link"
+                            Image by <a target="_blank" rel="noopener" class="inside-cleaning__box-license-link"
                                 href="https://www.freepik.com/free-photo/close-up-car-care-process_20735951.htm#query=pranie%20tapicerki%20samochodowej&position=31&from_view=search&track=ais#position=31&query=pranie%20tapicerki%20samochodowej">Freepik</a>
                         </div>
 
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">50-100zł</p>
-                            <h3 class="inside-cleaning__box-offer-heading">Czyszczenie i aplikacja dresingu na kokpit
-                            </h3> <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
+                            <h3 class="inside-cleaning__box-offer-heading">Czyszczenie i aplikacja dresingu na kokpit</h3>
+                             <button aria-label="Rozwiń menu tekstowe"
+                                class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn">
                                 <i class="both-cleaning-btn-icon fa-solid fa-solid fa-plus"></i>
                             </button>
                         </div>
@@ -138,7 +140,8 @@
                         <div class="inside-cleaning__box-offer">
                             <p class="inside-cleaning__box-offer-price">50-75zł</p>
                             <h3 class="inside-cleaning__box-offer-heading">Czyszczenie podsufitki</h3>
-                            <button aria-label="Rozwiń menu tekstowe" class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn"><i
+                            <button aria-label="Rozwiń menu tekstowe"
+                                class="both-cleaning__box-offer-btn inside-cleaning__box-offer-btn"><i
                                     class="both-cleaning-btn-icon fa-solid  fa-plus"></i></button>
                         </div>
 
@@ -166,8 +169,8 @@
                 <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a href="../pakiets.html"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
 
 
@@ -180,7 +183,7 @@
             <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
-        <p class="footer__domain-name">detalingkonin.pl</p>
+        <p class="footer__domain-name">detailingkonin.pl</p>
         <div class="footer__box-social">
             <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
@@ -196,9 +199,3 @@
 </body>
 
 </html>
-
-
-
-<!-- <a href="https://www.freepik.com/free-photo/interior-car-with-seats-with-blue-stripes_6143810.htm#query=sufit%20w%20samochodzie&position=19&from_view=search&track=ais">Image by azerbaijan_stockers</a> on Freepik -->
-<!-- Image by <a href="https://www.freepik.com/free-photo/close-up-car-care-process_20735951.htm#query=czyszczenie%20p%C4%99dzelkiem%20samochodu&position=23&from_view=search&track=ais">Freepik</a> -->
-<!-- <a href="https://www.freepik.com/free-photo/car-wash-detailing-station_8380351.htm#query=pranie%20tapicerki%20samochodowej&position=6&from_view=search&track=ais">Image by senivpetro</a> on Freepik -->
