added privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -59,20 +59,77 @@
 </nav>
     <div class="wrapper">
         <div class="privacy-policy">
-            <p>polityka prywatności</p>
-            <p>w trakcie tworzenia</p>
-            <p>w trakcie tworzenia</p>
-            <p>w trakcie tworzenia</p>
-            <p>w trakcie tworzenia</p>
-            <p>w trakcie tworzenia</p>
-            <p>w trakcie tworzenia</p>
-            <p>polityka prywatności</p>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Polityka prywatności formularza kontaktowego</p>
+                <p>Niniejsza Polityka Prywatności określa zasady przetwarzania danych osobowych zbieranych od
+                    użytkowników
+                    za pośrednictwem formularza kontaktowego na stronie internetowej detailingkonin.pl</p>
+            </div>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Administrator danych osobowych</p>
+                <p>Administratorem Twoich danych osobowych jest Mateusz Kupski, osoba prywatna prowadząca tę stronę internetową.</p>
+            </div>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Rodzaje danych osobowych</p>
+                <p>W ramach formularza kontaktowego na Stronie, zbieramy następujące dane osobowe użytkowników:</p>
+                <ul>
+                    <li>Imię i nazwisko</li>
+                    <li>Adres e-mail</li>
+                    <li>Numer telefonu</li>
+                    <li>Treść wiadomości</li>
+                </ul>
+            </div>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Cel zbierania danych</p>
+                <p>Dane osobowe użytkowników zbierane za pośrednictwem formularza kontaktowego są wykorzystywane w celu
+                    umożliwienia kontaktu z użytkownikiem w odpowiedzi na jego zapytanie, pytanie lub żądanie.</p>
+            </div>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Podstawa prawna przetwarzania</p>
+                <p>Podstawą prawną przetwarzania danych osobowych jest dobrowolna zgoda użytkownika, którą wyraża
+                    poprzez
+                    wypełnienie i wysłanie formularza kontaktowego.</p>
+            </div>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Prawa użytkownika</p>
+                <p>Przysługuje Ci prawo do wglądu, poprawiania, ograniczenia przetwarzania oraz usunięcia swoich danych
+                    osobowych, które posiadamy. W przypadku wyrażonej zgody możesz ją również w dowolnym momencie
+                    wycofać.
+                    Aby skorzystać z tych praw, skontaktuj się z nami za pośrednictwem podanego adresu
+                    e-mailowego lub formularza kontaktowego.</p>
+            </div>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Udostępnianie danych osobowych</p>
+                <p>Twoje dane osobowe nie będą udostępniane, sprzedawane ani dzielone z osobami trzecimi.</p>
+            </div>
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Zabezpieczenia danych</p>
+                <p>Dbamy o bezpieczeństwo przekazywanych nam danych osobowych i stosujemy odpowiednie środki techniczne
+                    i
+                    organizacyjne, aby chronić je przed nieautoryzowanym dostępem, utratą lub uszkodzeniem.</p>
+            </div>
+
+
+            <div class="privacy-policy-box">
+                <p class="privacy-policy-title">Kontakt</p>
+                <p>W przypadku pytań lub wątpliwości dotyczących Polityki Prywatności lub przetwarzania danych
+                    osobowych,
+                    prosimy o kontakt na adres mati.kupski@onet.com.pl .
+                </p>
+            </div>
+
         </div>
+
+
     </div>
-
-
-
-
 
     <footer class="footer">
     <div class="wrapper">
